<resources>
    <string name="app_name">Tetris</string>

    <string name="action_settings">Settings</string>
    <string name="tetris">Tetris</string>
    <string name="username">Enter Username.</string>

    <string name="button_start">Enter Chat</string>
    <string name="title_chat">Chat</string>
    <string name="enter_message">Enter Message.</string>
    <string name="send">Send</string>
    <string name="title_activity_tetris">Tetris</string>

    <string name="button_game">Start Game</string>

    <string name="start">Start</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="cell">Cell</string>
    <string name="newGame">New Game</string>
    <string name="clear">Clear</string>
    <string name="random">Random</string>

    <string name="score">Score</string>
    <string name="hold">Hold</string>
    <string name="next">Next</string>
    <string name="madeby">SFJ</string>
</resources>
