<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/cell_shape">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:paddingBottom="48dp"
        android:gravity="center"
        android:text="@string/tetris"
        android:textSize="40sp"
        android:textColor="@color/lightcyan"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:hint="@string/username"
            android:maxLength="12"
            android:textColor="@color/navy"
            android:textColorHint="@color/navy"
            android:background="@color/lightcyan"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="5"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@id/username"
                android:text="@string/button_start"
                android:background="@drawable/cell_shape"
                android:textColor="@color/lightcyan"
                android:onClick="enterChat"
                android:layout_weight="3"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="5"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@id/chat"
                android:text="@string/button_game"
                android:onClick="startGame"
                android:background="@drawable/cell_shape"
                android:textColor="@color/lightcyan"
                android:layout_weight="3" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/madeby"
            android:textColor="@color/almostblack"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>
